--- a/SiteStatus6/appsettings.json
+++ b/SiteStatus6/appsettings.json
@@ -9,11 +9,12 @@
     },
     "DefinitionDataRow": 4,
     "DefinitionSheetName": "definition",
-    "DefinitionWordKeyToColum": "siteKey/4,siteName/2",
+    "DefinitionWordKeyToColum": "siteKey/4,siteName/2,workStatus/5",
+    "WordStringToWorkStatus":"26_NW試験完了/26,25_工事中/25",
     "ProgressDataRow": 6,
     "ProgressSheetName": "progress",
     "ProgressWordKeyToColum": "siteKey/2,status/7",
     "ProgressIgnoreAtSiteKey": "00000A",
     "VIPWordSiteKeyToStatus":"00040Z/80",
-    "WordStringToStatus":"日程調整/20,調査日確定/11,工事日確定/21"
+    "WordStringToStatus":"日程調整/20,調査日確定/11,工事日確定/21,26_NW試験完了/26,25_工事中/25"
 }
